--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "mm-tot"
-version = "0.0.2"
+version = "0.0.4"
 description = "ToT - Pytorch"
 license = "MIT"
 authors = ["Kye Gomez <kye@apac.ai>"]
@@ -27,6 +27,9 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.6"
+transformers = "*"
+diffusers = "*"
+
 
 
 [tool.poetry.dev-dependencies]
